# whisper

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_md.py
whisp/: __init__.py  cli.py  md.py  timefmt.py
